--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,5 +1,15 @@
-<nav>
-    <div>
+<!-- <nav>
+    <div class="navig">
         <h1>Bron Club</h1>
+        <button routerLink="/clubs" class="btn btn-primary">Clubs</button>
     </div>
-</nav>
+</nav> -->
+
+<!-- 
+<nav class="navbar navbar-dark bg-dark">
+    <h1 style="color: white;">BronClub</h1>
+</nav> -->
+
+<div>
+    <h1>hello world</h1>
+</div>
