--- a/src/app/components/club/club.component.css
+++ b/src/app/components/club/club.component.css
@@ -1,12 +1,18 @@
 .club_pos{
     position: absolute;
-    left: 100px;
+    left: 600px;
     top: 100px;
 }
+.info{
+    position: relative;
+    top: 100px;
+    left: 100px;
+    width: 450px;
+}
 .button_pos{
-    position: absolute;
-    top: 450px;
-    left:100px;
+    position: relative;
+    top: 50px;
+    left:40px;
 }
 .button_pos button{
     width: 290px;
@@ -35,11 +41,11 @@
 .booking{
     position: relative;
     left: 700px;
-    top: 100px;
+    top: 5px;
     width: 400px;
     height: 400px;
     border: solid 1px;
-    z-index: 2;
+    z-index: 9999;
 }
 .mainPlaces{
     position: relative;
