--- a/src/app/components/club/club.component.html
+++ b/src/app/components/club/club.component.html
@@ -6,7 +6,7 @@
         <h5 class="card-title">{{club.rating}}</h5>
         <p class="card-text">some instagramm, contacts, adress </p>
         <h1>2Gis integration</h1>
-        <button class="btn btn-success" (click)="openBook()"><span>
+        <button class="btn btn-success" (click)="goToPlaces(club.id)"><span>
           Забронировать
         </span></button>
       </div>
