--- a/src/app/components/club/club.component.css
+++ b/src/app/components/club/club.component.css
@@ -41,11 +41,10 @@
 .booking{
     position: relative;
     left: 700px;
-    top: 5px;
     width: 400px;
     height: 400px;
     border: solid 1px;
-    z-index: 9999;
+    z-index: 1;
 }
 .mainPlaces{
     position: relative;
@@ -81,4 +80,12 @@
 .appearPlaces{
     position: relative;
     bottom: 50px;
+}
+.bookInformation{
+    position: relative;
+    left: 500px;
+    width: 300px;
+    height: 300px;
+    background-color: black;
+    z-index: 2;
 }
