--- a/src/app/components/places/places.component.css
+++ b/src/app/components/places/places.component.css
@@ -1,13 +1,49 @@
-.places-modal {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+.areas{
+    position: absolute;
+    left: 400px;
+    top: 100px;
+    width: 700px;
+    height: 600px;
+
+}
+.buttons{
+    position: relative;
+    top: 50px;
+    display: flex;
+    flex-direction: column;
+    width: 250px;
+    height: 250px;
+}
+.buttons button{
+    width: 100px;
+    margin-bottom:10px ;
+}
+.places{
+    position: relative;
+    left: 400px;
+    bottom: 250px;
+    width: 500px;
+    height: 500px;
+    border: solid 2px;
+}
+.booking{
+    position: relative;
+    right: 25px;
+    top: 25px;
+    width: 400px;
+    height: 400px;
+    border: solid 2px;
+    background-color: white; /* Form wrapper background color */
     padding: 20px;
-    background-color: #fff;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     border-radius: 8px;
-    width: 80%;
-    max-width: 500px;
-    z-index: 100;
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
+}
+.form-overlay {
+    position: fixed;
+    top: 148px;
+    left: 800px;
+    width: 500px;
+    height: 500px;
+    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black background */
+    display: flex;
 }
