--- a/src/app/components/places/places.component.css
+++ b/src/app/components/places/places.component.css
@@ -46,4 +46,6 @@
     height: 500px;
     background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black background */
     display: flex;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
