--- a/src/app/components/main/main.component.css
+++ b/src/app/components/main/main.component.css
@@ -1,4 +1,24 @@
-.navig{
+.search{
     position:absolute;
-    display: inline-block;
+    top: 150px;
+    left: 140px;
+    padding: 10px;
+    padding-top: 10px;
+}
+.search input{
+    width: 500px;
+    height: 70px;
+    border-radius: 4px;
+    border: solid 0.5px;
+}
+.photo{
+    width: 250px;
+    position: relative;
+    left: 750px;
+    top: 60px;
+}
+.photo img{
+    width: 700px;
+    size: 50%;
+
 }
