--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,18 +1,8 @@
-<!-- <nav>
-    <div class="navig">
-        <h1>Bron Club</h1>
-        <button routerLink="/clubs" class="btn btn-primary">Clubs</button>
-    </div>
-</nav> -->
-
-<!-- 
-<nav class="navbar navbar-dark bg-dark">
-    <h1 style="color: white;">BronClub</h1>
-</nav> -->
-
-<div>
-    <h1>hello world</h1>
+<div class="search">
+    <h1 style="font: 50px;">Бронируйте места онлайн</h1>
+    <h1>Поиск компютерных клубов</h1>   
+    <input type="text" placeholder="Поиграть">
 </div>
-
-<input type="text" #box >
-<button (click)="onSubmit(box.value)">Test</button>
+<div class="photo">
+    <img src="assets/club.jpg">
+</div>
