--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,7 +1,10 @@
 <div class="search">
     <h1 style="font: 50px;">Бронируйте места онлайн</h1>
-    <h1>Поиск компютерных клубов</h1>   
-    <input type="text" placeholder="Поиграть">
+    <h1>Поиск компютерных клубов</h1> 
+    <div class="searchIng">
+        <input type="text" placeholder="Поиграть">
+        <button type="submit"><i class="fa fa-search"></i></button>
+    </div>  
 </div>
 <div class="photo">
     <img src="assets/club.jpg">
