--- a/src/app/components/club/club.component.css
+++ b/src/app/components/club/club.component.css
@@ -39,12 +39,14 @@
     height: 100vh;
 }
 .booking{
-    position: relative;
+    position: fixed;
     left: 700px;
-    width: 400px;
+    width: 600px;
     height: 400px;
     border: solid 1px;
-    z-index: 1;
+    z-index: 9999;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+    bottom: 150px;
 }
 .mainPlaces{
     position: relative;
@@ -88,4 +90,23 @@
     height: 300px;
     background-color: black;
     z-index: 2;
+}
+.picture{
+    position: absolute;
+    width: 600px;
+    height: 400px;
+    left: 700px;
+    bottom: 150px;
+    border: solid 1px;
+
+}
+.btn-7{
+    width: 140px;
+    height: 30px;
+    border-radius: 4px;
+}
+.btn-7:hover{
+    border: 2px solid #ffffff;
+    color: #ffffff;
+    background-color: #17181c;
 }
