--- a/src/app/components/places/places.component.css
+++ b/src/app/components/places/places.component.css
@@ -6,8 +6,17 @@
     height: 600px;
 
 }
+.logo{
+    position: fixed;
+    left: 130px;
+    top: 70px;
+}
+.selectPlace{
+    border-radius: 4px;
+}
 .buttons{
     position: relative;
+    right: 80px;
     top: 50px;
     display: flex;
     flex-direction: column;
@@ -15,7 +24,6 @@
     height: 250px;
 }
 .buttons button{
-    width: 100px;
     margin-bottom:10px ;
 }
 .places{
@@ -25,6 +33,7 @@
     width: 500px;
     height: 500px;
     border: solid 2px;
+    border-radius: 6px;
 }
 .booking{
     position: relative;
@@ -48,4 +57,61 @@
     display: flex;
     margin-top: 10px;
     margin-bottom: 10px;
+
+}
+.btn-7{
+    width: 440px;
+    height: 50px;
+    border-radius: 4px;
+}
+.btn-7:hover{
+    border: 2px solid #ffffff;
+    color: #ffffff;
+    background-color: #17181c;
+}
+/* CSS */
+.button-27 {
+  appearance: none;
+  background-color: #000000;
+  border: 2px solid #1A1A1A;
+  border-radius: 15px;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  cursor: pointer;
+  display: inline-block;
+  font-family: Roobert,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+  font-size: 16px;
+  font-weight: 600;
+  line-height: normal;
+  margin: 0;
+  min-height: 60px;
+  min-width: 0;
+  outline: none;
+  padding: 16px 24px;
+  text-align: center;
+  text-decoration: none;
+  transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  width: 100%;
+  will-change: transform;
+}
+
+.button-27:disabled {
+  pointer-events: none;
+}
+
+.button-27:hover {
+  box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+  transform: translateY(-2px);
+}
+
+.button-27:active {
+  box-shadow: none;
+  transform: translateY(0);
+}
+.last{
+    position: absolute;
+    top: 600px;
 }
