--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,11 @@
 <nav>
-  <a routerLink="main"><h1>Home</h1></a>
-  <a routerLink="clubs"><h1>Clubs</h1></a>
+  <h1>BronClub</h1>
+  <h1 id="admin">Admin</h1>
 </nav>
+<div class="secondNav">
+  <a routerLink="clubs"><h1>Clubs</h1></a>
+  <a href="#"><h1>Top</h1></a>
+</div>
 
 
 <router-outlet></router-outlet>
