--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,11 +1,24 @@
 <div class="search">
-    <h1 style="font: 50px;">Бронируйте места онлайн</h1>
-    <h1>Поиск компютерных клубов</h1> 
+    <div>
+        <h1 id="description">Бронируйте места онлайн</h1>
+        <h1 id="description">Поиск компютерных </h1>
+        <h1 id="description">клубов</h1> 
+    </div>
+    <p style="position: relative;top:90px;right: 45px; font-size: 15px;"> У антимага сегодня день рождение</p>
     <div class="searchIng">
         <input type="text" placeholder="Поиграть">
-        <button type="submit"><i class="fa fa-search"></i></button>
+        <button type="button"><i class="fa fa-search" style="font-size: 50px;"></i></button>
     </div>  
 </div>
 <div class="photo">
     <img src="assets/club.jpg">
+</div>
+<div class="company">
+    <p> <strong> О компании</strong></p>
+    <span>
+        Это сервис которая помогает бронировать места в компьютерных клубах онлайн <br>
+        не выходя из дом. <br> не приходится много раз звонить когда линиий заняты, или долго
+        ожидать ответа на Whatsapp. Бронь проходит в онлайн режиме <br>
+        На BronClub собраны большое количество игровых клубов Алматы, Астана
+    </span>
 </div>
