--- a/src/app/components/main/main.component.css
+++ b/src/app/components/main/main.component.css
@@ -14,28 +14,56 @@
 .photo img{
     width: 700px;
     size: 50%;
-    
+    border-radius: 4px;
+}
+h1#description{
+    font-size: 50px;
+    position: relative;
+    right: 35px;
+    margin-top:10px ;
 }
 .searchIng{
     position: relative;
     right: 50px;
     top:100px;
-    border: solid 2px;
+    border: none;
     width: 600px;
-    height: 90px;
+    height: 80px;
     padding-left:10px;
+    box-shadow: 0 0 5pt 0.5pt #D3D3D3;
+    border-radius: 4px;
 }
 .searchIng input{
     width: 500px;
     height: 70px;
     border-radius: 4px;
-    border: solid 0.5px;
+    border: none;
+    position: relative;
+    top: 2px;
+    padding-left: 10px;
+    font-size: 20px;
+}
+input:focus{
+    outline: none;
+}
+
+.searchIng button{
+    margin-left: 14px;
+    width: 50px;
+    background-color: white;
     position: relative;
     top: 10px;
-    padding-left: 10px;
+    border: none;
 }
-.searchIng button{
+.company{
+    position: relative;
+    width: 700px;
+    left: 100px;
+    top: 400px;
+    display: flex;
+    flex-direction: row;
+    padding-bottom: 45px;
+}
+.company span{
     margin-left: 10px;
-    width: 50px;
-    background-color: #292929;
 }
