Login component are created

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
 <nav>
-  <h1>BronClub</h1>
+  <a routerLink="main"><h1>BronClub</h1></a>
   <h1 id="admin">Admin</h1>
 </nav>
 <div class="secondNav">
-  <a routerLink="clubs"><h1>Clubs</h1></a>
-  <a href="#"><h1>Top</h1></a>
+  <a routerLink="clubs"><h1>Все</h1></a>
+  <a href="#"><h1>Популярные</h1></a>
 </div>
 
 
