--- a/src/app/components/club/club.component.css
+++ b/src/app/components/club/club.component.css
@@ -5,100 +5,17 @@
 }
 .info{
     position: relative;
-    top: 100px;
-    left: 100px;
+    margin-top: 60px;
+    margin-left: 150px;
     width: 450px;
+    height: 500px;
 }
-.button_pos{
-    position: relative;
-    top: 50px;
-    left:40px;
+.club{
+    
 }
-.button_pos button{
-    width: 290px;
-    height: 50px;
-}
-.button_pos span{
-    font-size: 30px;
-    position: relative;
-    bottom: 5px;
-}
-.places{
-    position: fixed;
-    left: 400px;
-    top: 100px;
-    margin: 20px;
-    padding: 20px;
-    display: flex;
-    justify-content: space-between;
-}
-.custom-modal-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-}
-.booking{
-    position: fixed;
-    left: 700px;
-    width: 600px;
-    height: 400px;
-    border: solid 1px;
-    z-index: 9999;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
-    bottom: 150px;
-}
-.mainPlaces{
-    position: relative;
-    top: 50px;
-    left: 50px;
-    padding: 10px;
-    margin: 10px;
-}
-.mainVip{
-    position: relative;
-    bottom: 80px;
-    display:flex ;
-    flex-direction: row;
-}
-.mainVip button{
-    margin-right: 50px;
-    width: 70px;
-}
-.mainVip button.active{
-    background-color: green;
-}
-.selectPlace{
-    border: solid 2px;
-    border-radius: 3px;
-    width: 40px;
-    text-align: center;
-}
-.tobook{
-    position: relative;
-    left: 50px;
-    bottom: 20px;
-}
-.appearPlaces{
-    position: relative;
-    bottom: 50px;
-}
-.bookInformation{
-    position: relative;
-    left: 500px;
-    width: 300px;
-    height: 300px;
-    background-color: black;
-    z-index: 2;
-}
-.picture{
-    position: absolute;
-    width: 600px;
-    height: 400px;
-    left: 700px;
-    bottom: 150px;
-    border: solid 1px;
-
+.club p{
+    opacity: 0.7;
+    margin-top: -20px;
 }
 .btn-7{
     width: 140px;
