--- a/src/app/components/clubs/clubs.component.css
+++ b/src/app/components/clubs/clubs.component.css
@@ -1,12 +1,39 @@
+.parentclub{
+    display: flex;
+    flex-wrap: wrap;
+}
 .clubs{
-    background-color: #292929;
-    position: absolute;
-    width:100%;
-    top: 100px;
+    width: 250px;
+    height: 300px;
+    margin-left: 40px;
+    margin-top: 35px;
+    border-radius: 10px;
+    box-shadow: 0 10px 10px rgba(0, 0,0, 0.212);
+    box-sizing: border-box;
+    cursor: pointer;
 }
-.clubName{
-    color: aliceblue;
+.clubs img{
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+}   
+.clubs:hover{
+    margin-top: 30px;
+    transition: all 0.5s;
 }
-a{
-    text-decoration: none;
+.clubsPhoto{
+    height: 250px;
+}
+h1#name{
+    margin-left: 15px;
+    margin-top: 10px;
+}
+.clubsdetail{
+    display: flex;
+    flex-direction: row;
+}
+.clubsdetail span{
+    margin-top: 10px;
+    margin-left: 15px;
+    font-size: 20px;
 }
