--- a/src/app/components/main/main.component.css
+++ b/src/app/components/main/main.component.css
@@ -31,17 +31,20 @@ h1#description{
     height: 80px;
     padding-left:10px;
     box-shadow: 0 0 5pt 0.5pt #D3D3D3;
-    border-radius: 4px;
+    border-radius: 8px;
 }
 .searchIng input{
     width: 500px;
     height: 70px;
-    border-radius: 4px;
+    border-radius: 8px;
     border: none;
     position: relative;
     top: 2px;
     padding-left: 10px;
     font-size: 20px;
+}
+.ng-select ::placeholder{
+    width: 150px;
 }
 input:focus{
     outline: none;
@@ -66,4 +69,9 @@ input:focus{
 }
 .company span{
     margin-left: 10px;
+}
+.filteredClubs{
+    width: 200px;
+    height: 60px;
+    margin-top: 100px;
 }
