--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -6,7 +6,11 @@
     </div>
     <p style="position: relative;top:90px;right: 45px; font-size: 15px;"> У антимага сегодня день рождение</p>
     <div class="searchIng">
-        <input type="text" placeholder="Поиграть">
+        <ng-select
+        [items]="clubs"
+        bindLabel="name"
+        placeholder="Search for clubs"
+        [(ngModel)]="searchClub"></ng-select>
         <button type="button"><i class="fa fa-search" style="font-size: 50px;"></i></button>
     </div>  
 </div>
