installed firebase, and start making admin login forms

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <nav>
   <a routerLink="main"><h1>BronClub</h1></a>
-  <h1 id="admin">Admin</h1>
+  <a routerLink="login">
+    <h1 id="admin">Admin</h1>
+  </a>
 </nav>
 <div class="secondNav">
   <a routerLink="clubs"><h1>Все</h1></a>
