--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,1 +1,7 @@
-<p>login works!</p>
+<div class="container">
+    <h1>Login</h1>
+    <div class="sign-in">
+        <input type="text" name="username" >
+        <input type="password" name="password" >
+    </div>
+</div>
