--- a/src/app/components/main/main.component.css
+++ b/src/app/components/main/main.component.css
@@ -76,17 +76,18 @@ input:focus{
     box-shadow: 0 0 5pt 0.5pt #D3D3D3;
     border-radius: 8px;
 }
-.searchClubs img{
+.clubsAppear{
+    display: flex;
+    flex-direction: row;
+    margin-top: 5px;
+    margin-right: 10px;
+    
+}
+.clubsAppear img{
     size: 50%;
     border-radius: 50%;
     width: 45px;
 }
-.clubsAppear{
-    display: flex;
-    flex-direction: row;
-    background-color: #fbfbfb;
-}
-.clubsAppear:hover{
-    background-color: #D3D3D3;
-    cursor: pointer;
+.clubsAppear h1{
+    font: caption;
 }
