--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -6,15 +6,16 @@
     </div>
     <p style="position: relative;top:90px;right: 45px; font-size: 15px;"> У антимага сегодня день рождение</p>
     <div class="searchIng">
-        <mat-form-field>
-            <input matInput type="text" [(ngModel)]="searchClub" [matAutocomplete]="auto">
-            <button type="button"><i class="fa fa-search" style="font-size: 50px;"></i></button>
-            <mat-autocomplete #auto="matAutocomplete">
-                <mat-option *ngFor="let club of clubs | filter:searchClub" [value]="club">
-                    <h1>{{club.name}}</h1>
-                </mat-option>
-            </mat-autocomplete>
-        </mat-form-field>
+        <input matInput type="text" [(ngModel)]="searchClub" [matAutocomplete]="auto">
+        <button type="button"><i class="fa fa-search" style="font-size: 50px;"></i></button>
+        <mat-autocomplete #auto="matAutocomplete">
+            <mat-option *ngFor="let club of clubs | filter:searchClub" [value]="club">
+                <div class="clubsAppear" (click)="goToClubDetail(club.id)">
+                    <img [src]="club.photoUrl" alt="">
+                    <h1>{{club.name}}</h1>  
+                </div>
+            </mat-option>
+        </mat-autocomplete>
     </div>  
     
     <!-- <div class="searchClubs" *ngIf="clubVisible">
