--- a/src/app/components/club/club.component.css
+++ b/src/app/components/club/club.component.css
@@ -5,25 +5,96 @@
 }
 .info{
     position: relative;
-    margin-top: 60px;
+    margin-top: 50px;
     margin-left: 150px;
-    width: 450px;
-    height: 500px;
+    width: 370px;
+    height: 550px;
+    box-shadow: 0 0 5pt 0.5pt #D3D3D3;
+    border-radius: 8px;
 }
-.club{
-    
+.container{
+    margin-bottom: 10px;
+    margin-left: 10px;
 }
 .club p{
     opacity: 0.7;
     margin-top: -20px;
 }
-.btn-7{
-    width: 140px;
-    height: 30px;
-    border-radius: 4px;
+.button-27 {
+    appearance: none;
+    background-color: #292929;
+    border: 2px solid #1A1A1A;
+    border-radius: 15px;
+    box-sizing: border-box;
+    color: #FFFFFF;
+    cursor: pointer;
+    display: inline-block;
+    font-family: Roobert,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+    font-size: 16px;
+    font-weight: 600;
+    line-height: normal;
+    margin: 0;
+    min-height: 60px;
+    min-width: 0;
+    outline: none;
+    padding: 16px 24px;
+    text-align: center;
+    text-decoration: none;
+    transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    width: 100%;
+    will-change: transform;
+    width: 300px;
+    margin-top: 30px;
 }
-.btn-7:hover{
-    border: 2px solid #ffffff;
-    color: #ffffff;
-    background-color: #17181c;
+  
+.button-27:disabled {
+    pointer-events: none;
+}
+  
+.button-27:hover {
+    box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+    transform: translateY(-2px);
+}
+  
+.button-27:active {
+    box-shadow: none;
+    transform: translateY(0);
+  }
+.map{
+    width: 300px;
+    height: 180px;
+    border-radius: 8px;
+}
+.contacts{
+    display: flex;
+    flex-direction: row;
+    margin-right: 20px;
+}
+.images{
+    width: 400px;
+    height: 400px;
+    position: relative;
+    left: 700px;
+    bottom: 500px;
+}
+.image-slider{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.slide{
+    width: 150px;
+    transition: left 0.75s;
+    z-index: 12;
+}
+.slide img{
+    width: 300px;
+    object-fit: cover;
+}
+.nextPrev{
+    position: relative;
+    top: 400px;
 }
