--- a/src/app/components/main/main.component.css
+++ b/src/app/components/main/main.component.css
@@ -21,6 +21,7 @@ h1#description{
     position: relative;
     right: 35px;
     margin-top:10px ;
+    font-family: Arial, Helvetica, sans-serif;
 }
 .searchIng{
     position: relative;
@@ -81,7 +82,6 @@ input:focus{
     flex-direction: row;
     margin-top: 5px;
     margin-right: 10px;
-    
 }
 .clubsAppear img{
     size: 50%;
